--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
             </div>
 
-            <input type="hidden" name="_next" value="http://127.0.0.1:5500/index.html">
+            <input type="hidden" name="_next" value="https://martinagarcia1710.github.io/portfolio/">
             <input type="hidden" name="_captcha" value="false">
 
 
